# biodata-assistant

./: .gitignore  CLAUDE.md  INSTRUCTIONS.md  LICENSE  README.md  agentmail-doc.md  architecture.md  biodata.db  browser-use-doc.md  docker-compose.yml  implementation_plan.md  main.py  phase_1_backend_infrastructure.md  phase_3_external_integrations.md  phase_4_frontend_api_ux.md  pydantic_doc.md  pyproject.toml
backend/: .env.example  Dockerfile  README_email_test.md  biodata.db  demo.py  pyproject.toml  requirements.txt  run_demo.sh  test.py  test_email.py
backend/app/: config.py  main.py
backend/exports/: contacts_linkedin_20250914_121819.csv  contacts_linkedin_20250914_121819.json  contacts_linkedin_20250914_123724.csv  datasets_geo_20250914_103658.csv  datasets_geo_20250914_103658.json  datasets_geo_20250914_104141.csv  datasets_geo_20250914_104141.json  datasets_geo_20250914_105118.csv  datasets_geo_20250914_105118.json  datasets_geo_20250914_110216.csv  datasets_geo_20250914_110216.json  datasets_geo_20250914_125517.csv  datasets_geo_20250914_125517.json  datasets_geo_20250914_131544.csv  datasets_geo_20250914_131544.json  datasets_geo_filtered_20250914_124633.csv  github_leads_20250914_085338.csv  github_leads_20250914_105704.json  github_leads_20250914_114839.csv  outreach_results_20250914_105313.json  outreach_results_20250914_105827.csv  outreach_results_20250914_111855.json  outreach_results_20250914_113849.csv  outreach_results_20250914_113849.json  outreach_results_20250914_114240.csv  outreach_results_20250914_114909.csv  (+1 more)
backend/tests/: test_agents.py  (+1 more)
(+1067 files in other folders)
